--- a/ax-permission/src/main/res/values/strings.xml
+++ b/ax-permission/src/main/res/values/strings.xml
@@ -1,6 +1,24 @@
 <resources>
     <string name="config_perTitle">권한 설정</string>
+    <string name="config_Essential">* 필수 권한 *</string>
+    <string name="config_Choice">* 선택 권한 *</string>
     <string name="permission_notAllowMsg">거부하셨습니다. [설정] > [권한] 에서 권한을 허용할 수 있어요.</string>
-
     <string name="comm_confirm">확인</string>
+    <string name="dialog_set">설정</string>
+    <string name="dialog_cancel">취소</string>
+
+    <string name="alert_re_title">권한 필요</string>
+    <string name="alert_re_message">다음 권한이 거부되었습니다: 권한을 다시 요청하시겠습니까?</string>
+
+    <string name="alert_set_title">권한 이미 부여됨</string>
+    <string name="alert_set_message">권한이 이미 설정되었습니다: \n 다시 권한을 설정하시겠습니까?</string>
+
+    <string name="alert_not_title">권한 필요</string>
+    <string name="alert_not_message">필수 권한을 허용하지 않으셨습니다. 앱을 종료 하시겠습니까?</string>
+
+    <string name="toast_message_1">필수 권한이 있어야 앱을 실행할 수 있습니다.</string>
+    <string name="toast_message_2">필수 권한을 허용 해주세요.</string>
+
+    <string name="alert_positive">예</string>
+    <string name="alert_negative">아니요</string>
 </resources>
