- 1.1.8 - 한글/영문 호환 (2) - 확인 버튼 클릭 효과 추가

--- a/ax-permission/src/main/res/values-en/strings.xml
+++ b/ax-permission/src/main/res/values-en/strings.xml
@@ -19,6 +19,9 @@
     <string name="alert_positive">Yes</string>
     <string name="alert_negative">No</string>
 
+    <string name="toast_permission_granted_format">%s permission has been granted.</string>
+    <string name="toast_permission_denied_format">%s permission has been denied.</string>
+
     <string name="toast_message_1">You must have the required permissions to run the app.</string>
     <string name="toast_message_2">Please allow the required permissions.</string>
 </resources>
