--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ax-permission</string>
+
+    <string name="test_permission_manage_overlay_permission_title">다른 앱 위에 표시</string>
+    <string name="test_permission_manage_overlay_permission_description">다른 앱 위에 표시되도록 허용하여 더욱 편리한 사용자 경험을 제공합니다</string>
+    <string name="test_permission_notification_listener_settings_title">알림 접근</string>
+    <string name="test_permission_notification_listener_settings_description">재생 중인 음악·영상 재생을 일시 정지하는 데 필요한 권한입니다</string>
 </resources>
