--- a/ax-permission/src/main/res/values/strings.xml
+++ b/ax-permission/src/main/res/values/strings.xml
@@ -4,7 +4,10 @@
         %s의 원활한 서비스 이용을 위해
         \n아래 권한을 확인해 주세요
     </string>
-<string name="ax_permission_title_without_app_name">원활한 앱 서비스 이용을 위해\n아래 권한을 확인해 주세요</string>
+    <string name="ax_permission_title_without_app_name">
+        원활한 앱 서비스 이용을 위해
+        \n아래 권한을 확인해 주세요
+    </string>
 
     <!-- Smart line break title components -->
     <string name="ax_permission_title_first_line_format">%s의 원활한 서비스 이용을 위해</string>
@@ -38,10 +41,10 @@
 
     <!-- 영구 거부 다이얼로그 (Permanently denied dialog) -->
     <string name="ax_permission_permanently_denied_dialog_title">권한이 거부되었습니다</string>
-    <string name="ax_permission_permanently_denied_dialog_message_format">%s 권한이 거부되어, 설정 화면에서 직접 권한을 허용해 주셔야 합니다.</string>
-    <string name="ax_permission_permanently_denied_dialog_guide_1">아래 설정으로 이동 버튼을 눌러주세요.</string>
-    <string name="ax_permission_permanently_denied_dialog_guide_2">설정 화면에서 권한 메뉴를 눌러주세요.</string>
-    <string name="ax_permission_permanently_denied_dialog_guide_3_format">\'%s\' 권한을 누르고 \'허용\'을 눌러 권한을 허용해 주세요.</string>
+    <string name="ax_permission_permanently_denied_dialog_message_format">\'%s\' 권한이 거부되어, 설정 화면에서 직접 권한을 허용해 주셔야 합니다.</string>
+    <string name="ax_permission_permanently_denied_dialog_guide_1">아래 설정으로 이동 버튼을 눌러주세요</string>
+    <string name="ax_permission_permanently_denied_dialog_guide_2">설정 화면에서 [권한] 메뉴를 눌러주세요</string>
+    <string name="ax_permission_permanently_denied_dialog_guide_3_format">[%s] 권한을 누르고 [허용]을 눌러 권한을 허용해 주세요</string>
     <string name="ax_permission_permanently_denied_dialog_positive_button">설정으로 이동</string>
     <string name="ax_permission_permanently_denied_dialog_negative_button">취소</string>
 
